tests/valid_inputs/scanf.cpp

int scanf(const char * fmt, ...);

int main() {
	int a;
	return scanf("%d", &a);
}
