tests/invalid_inputs/sema/modulo_with_double.cpp

int main() {
	double d;
	d % 5;
}
